--- a/stage7/dune-project
+++ b/stage7/dune-project
@@ -19,7 +19,7 @@
  (name stage7)
  (synopsis "A short synopsis")
  (description "A longer description")
- (depends ocaml dune)
+ (depends ocaml dune core)
  (tags
   (topics "to describe" your project)))
 
